[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/enemy_script.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 24.4227 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.9142, 25.8369 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
z_index = -1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.157494, 0 )
scale = Vector2( 1.5, 1.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.0883942, 0 )
shape = SubResource( 2 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.68221e-06, 0.148819 )
scale = Vector2( 2.3989, 2.39394 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
